# fl.ru-parser

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: schemas.py
src/bot/: __init__.py  __main__.py  adapter.py  app.py  callbacks.py  config.py  formatting.py  handlers.py  keyboards.py  poller.py  states.py  storage.py  subscription.py
src/parser/: __init__.py  builder.py  category_extractor.py  category_parser.py  config.py  constants.py  extractor.py  fetcher.py  filters.py  fl_parser.py  helpers.py  page_parser.py  patterns.py
src/utils/: logging.py
